# webscrape

./: .gitignore  README.md  cardinali.csv  main.py  ok.json  pyproject.toml  requirements.txt
src/: anal.html  cardinali.py  funcs.py  roca.py  scraper.py
